--- a/versions.gradle
+++ b/versions.gradle
@@ -8,6 +8,7 @@ ext {
             dagger2           : '2.13',
             javax_annotations : '10.0-b28',
             retrofit          : '2.3.0',
+            okhttp            : '3.10.0',
             rxjava            : '2.1.3',
             rxandroid         : '2.0.1'
     ]
