--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.groupgeneral.GroupGeneralActivity">
+        <activity android:name=".ui.group.GroupActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
