--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:$versions.supportLibrary"
     implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
 
+    implementation "com.daimajia.swipelayout:library:$versions.swipeLayout@aar"
+
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
     implementation 'com.google.android.gms:play-services-maps:12.0.0'
