Add QR invitation activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.group.GroupActivity">
+        <activity
+            android:name=".ui.group.GroupActivity"
+            android:label="@string/your_group"
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.groupqr.GroupQrActivity"
+            android:label="@string/invite_qr_code"
+            android:parentActivityName=".ui.group.GroupActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
