--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
 
     implementation "com.daimajia.swipelayout:library:$versions.swipeLayout@aar"
+    implementation "com.github.kenglxn.QRGen:android:$versions.qrGen"
 
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
