--- a/versions.gradle
+++ b/versions.gradle
@@ -6,6 +6,7 @@ ext {
             supportLibrary    : '27.0.2',
             constraintLayout  : '1.0.2',
             swipeLayout       : '1.2.0',
+            qrGen             : '2.4.0',
             dagger2           : '2.13',
             javax_annotations : '10.0-b28',
             retrofit          : '2.3.0',
