Increment packages versions

--- a/versions.gradle
+++ b/versions.gradle
@@ -3,8 +3,9 @@ ext {
             buildTools        : '27.0.3',
             androidPlugin     : '3.2.0-alpha04',
             kotlin            : '1.2.30',
-            supportLibrary    : '27.0.2',
+            supportLibrary    : '27.1.1',
             constraintLayout  : '1.0.2',
+            playServices      : '12.0.1',
             swipeLayout       : '1.2.0',
             qrGen             : '2.4.0',
             dagger2           : '2.13',
