--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,13 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$versions.supportLibrary"
     implementation "com.android.support:recyclerview-v7:$versions.supportLibrary"
     implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
+    implementation "com.google.android.gms:play-services:$versions.playServices"
 
     implementation "com.daimajia.swipelayout:library:$versions.swipeLayout@aar"
     implementation "com.github.kenglxn.QRGen:android:$versions.qrGen"
 
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
-    implementation 'com.google.android.gms:play-services-maps:12.0.0'
-    implementation 'com.android.support:appcompat-v7:27.1.0'
     kapt "com.google.dagger:dagger-compiler:$versions.dagger2"
     kapt "com.google.dagger:dagger-android-processor:$versions.dagger2"
     implementation "com.google.dagger:dagger-android:$versions.dagger2"
