--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$versions.supportLibrary"
     implementation "com.android.support:recyclerview-v7:$versions.supportLibrary"
     implementation "com.android.support.constraint:constraint-layout:$versions.constraintLayout"
-    implementation "com.google.android.gms:play-services:$versions.playServices"
+    implementation "com.google.android.gms:play-services-maps:$versions.playServices"
+    implementation "com.google.android.gms:play-services-vision:$versions.playServices"
 
     implementation "com.daimajia.swipelayout:library:$versions.swipeLayout@aar"
     implementation "com.github.kenglxn.QRGen:android:$versions.qrGen"
