--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
-        android:name=".GroupieApplication"
+        android:name=".android.GroupieApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".ui.landing.LandingActivity">
+        <activity android:name=".android.ui.landing.LandingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,16 +24,16 @@
         </activity>
 
         <activity
-            android:name=".ui.group.GroupActivity"
+            android:name=".android.ui.group.GroupActivity"
             android:label="@string/your_group"
             android:launchMode="singleTop"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <activity
-            android:name=".ui.group.GroupQrActivity"
+            android:name=".android.ui.group.GroupQrActivity"
             android:label="@string/invite_qr_code"
-            android:parentActivityName=".ui.group.GroupActivity" />
+            android:parentActivityName=".android.ui.group.GroupActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
