--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     implementation "com.daimajia.swipelayout:library:$versions.swipeLayout@aar"
     implementation "com.github.kenglxn.QRGen:android:$versions.qrGen"
+    implementation "com.afollestad.material-dialogs:core:$versions.materialDialogs"
 
     // Dagger 2
     implementation "com.google.dagger:dagger:$versions.dagger2"
