--- a/versions.gradle
+++ b/versions.gradle
@@ -8,6 +8,7 @@ ext {
             playServices      : '12.0.1',
             swipeLayout       : '1.2.0',
             qrGen             : '2.4.0',
+            materialDialogs   : '0.9.6.0',
             dagger2           : '2.13',
             javax_annotations : '10.0-b28',
             retrofit          : '2.3.0',
